# rrc_package

./: .gitignore  MANIFEST.in  evaluate_policy.py  goal.json  package.xml  pos_control.yaml  run  run_policy.ipynb  run_sim  setup.cfg  setup.py
nerf_rrc/: pd_control.py  pinocchio_utils.py  quaternions.py  viz_utils.py
nerf_rrc/control/: pos_control.py  pos_control.yaml
nerf_rrc/scripts/: dice_example_with_gym.py  real_trajectory_example_with_gym.py  real_up_and_down_tip_control.py  sim_move_up_and_down.py  sim_trajectory_example_with_gym.py  sim_up_and_down_tip_control.py  up_and_down.py
rrc_example_package/: cube_trajectory_env.py  debug_camera.npz  pd_control.py  pinocchio_utils.py  utils.py
rrc_example_package/scripts/: real_trajectory_example_with_gym.py  sim_trajectory_example_with_gym.py
