<?xml version="1.0"?>
<package format="2">
  <name>nerf_rrc</name>
  <version>1.0.0</version>
  <description>
      Package for running nerf_grasping on the Real Robot Challenge Submission System.
  </description>

  <maintainer email="krshna@stanford.edu">Krishnan Srinivasan</maintainer>

  <license>BSD 3-clause</license>

  <url type="website">https://real-robot-challenge.com/</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>robot_fingers</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
